force-app/main/default/objects/BirlasoftEmployee__c/BirlasoftEmployee__c.object-meta.xml
<CustomObject>
    <label>BirlasoftEmployee</label>
    <nameField>
        <label>BirlasoftEmployee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BirlasoftEmployees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>