force-app/main/default/objects/BirlasoftEmployee__c/fields/Emp_Departement__c.field-meta.xml
<CustomField>
    <fullName>Emp_Departement__c</fullName>
    <label>Emp Departement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>