force-app/main/default/objects/BirlasoftEmployee__c/fields/Emp_Salary__c.field-meta.xml
<CustomField>
    <fullName>Emp_Salary__c</fullName>
    <label>Emp Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>