force-app/main/default/objects/BirlasoftEmployee__c/fields/EmpAddress__c.field-meta.xml
<CustomField>
    <fullName>EmpAddress__c</fullName>
    <label>EmpAddress</label>
    <length>10</length>
    <type>Text</type>
</CustomField>